# framework-understanding

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  claude-code-deep-dive.md  cli-vs-ide-comparison.md  code-as-cowork-setup-tool.md  convergence-as-capability.md  cowork-controllability-paradox.md  gstack-research.md  install-skills.sh  mobile-remote-install.md  multi-agent-orchestration.md  nezha-mode.md  post-model-competition-landscape.md  pyproject.toml  requirements.txt  setup.bat  start.bat  workspace-file-handling-research.md  workspace-file-handling.md
.claude/skills/: quickstart.md  setup-cowork-teams.md  setup-cowork.md
.github/workflows/: ci.yml
config/: settings.yaml
config/prompts/: completeness_check.jinja2  compliance_check.jinja2  risk_analysis.jinja2  system.jinja2  term_fairness.jinja2
config/rules/: default_rules.yaml
discussions/: 2026-03-25-ai-power-user-stack.md
docs/: harness-engineering-insights.md  project-retrospective.md
docs/backlog/: INDEX.md
docs/decisions/: 2026-04-04-code-quality-audit.md
docs/guides/: 2026-03-11-project-retrospective.md  2026-04-05-project-journey.md  2026-04-06-best-practices-distilled.md  deployment.md
hr_matching/: app.py  config.py
hr_matching/knowledge/: README.md  职称评审条件.md
sample_data/: generate_sample.py  sample_roster.xlsx
scripts/: precompute_queries.py
src/contract_reviewer/: app.py  (+2 more)
tests/: conftest.py  test_aggregator.py  test_app_security.py  test_circuit_breaker.py  test_cli_commands.py  test_models.py  test_retry.py  test_splitter.py  test_verifier.py
(+175 files in other folders)
